@@ -2,7 +2,7 @@ plugins {
     id 'java'
     id 'eclipse'
     id "org.jetbrains.gradle.plugin.idea-ext" version "1.1.8"
-    id "com.github.johnrengelman.shadow" version "8.1.1"
+    id "io.github.goooler.shadow" version "8.1.8"
 }
 
 group = 'net.cytonic'
@@ -10,6 +10,10 @@ version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    maven {
+        name = 'cytonic-repo'
+        url = 'https://repo.foxikle.dev/cytonic'
+    }
     maven {
         name = "papermc-repo"
         url = "https://repo.papermc.io/repository/maven-public/"
@@ -21,6 +25,8 @@ dependencies {
     annotationProcessor "com.velocitypowered:velocity-api:3.3.0-SNAPSHOT"
     implementation 'redis.clients:jedis:5.1.0' // redis client
     implementation 'com.rabbitmq:amqp-client:5.21.0' // Message broker
+    implementation 'net.cytonic:Commons:1.2.0'
+    implementation 'com.mysql:mysql-connector-j:9.0.0' //mysql connector
 
 }
 
@@ -39,7 +45,7 @@ tasks {
     }
 }
 
-def targetJavaVersion = 17
+def targetJavaVersion = 21
 java {
     def javaVersion = JavaVersion.toVersion(targetJavaVersion)
     sourceCompatibility = javaVersion
@@ -51,6 +57,7 @@ java {
 
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
+    options.compilerArgs.add("--enable-preview")
 
     if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
         options.release.set(targetJavaVersion)
